--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,16 @@ python:
 os:
     linux
 
+before_script:
+  - cd ${TRAVIS_BUILD_DIR}
+  - lcov --directory . --zerocounters
+
 script:
     make run
+
+after_success:
+  - cd ${TRAVIS_BUILD_DIR}
+  - lcov --directory . --capture --output-file coverage.info
+  - lcov --remove coverage.info 'tests/*' '/usr/*' --output-file coverage.info
+  - lcov --list coverage.info
+  - coveralls-lcov --repo-token=${COVERALLS_TOKEN} coverage.info
