--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,16 @@ python:
 os:
     linux
 
+install:
+ # install latest LCOV (1.9 was failing for me) [1]
+  - cd ${TRAVIS_BUILD_DIR}
+  - wget http://ftp.de.debian.org/debian/pool/main/l/lcov/lcov_1.11.orig.tar.gz
+  - tar xf lcov_1.11.orig.tar.gz
+  - sudo make -C lcov-1.11/ install
+  # install lcov to coveralls conversion + upload tool
+  - gem install coveralls-lcov
+  - lcov --version
+
 before_script:
   - cd ${TRAVIS_BUILD_DIR}
   - lcov --directory . --zerocounters
