--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_script:
 
 script:
   - coverage run application/my_app.py -c application/config/my_app.conf
-  - nosetest
+  - nosetests
   - pylint application/common
 
 after_success:
