--- a/.travis.yml
+++ b/.travis.yml
@@ -9,16 +9,13 @@ os:
     linux
 
 install:
-  - pip install -r requirements.txt
-  - pip install -r test-requirements.txt
+  - make venv
 
 before_script:
   - ls
 
 script:
-  - coverage run application/my_app.py -c application/config/my_app.conf
-  - nosetests application/tests/common/
-  - pylint application/common
+  - make test
 
 after_success:
-  - coveralls
+  - ls
