--- a/application/config/my_app.conf
+++ b/application/config/my_app.conf
@@ -1,3 +1,14 @@
 
 [main]
 user = tiko
+
+[logger]
+file = test.log
+
+# CRITICAL 5
+# ERROR    4
+# WARNING  3
+# INFO     2
+# DEBUG    1
+# NOTSET   0
+level = 4
